# krakenflu

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
jupyter_notebooks/: README.md  build_db_flu_reorg.ipynb  build_dbv2.ipynb  use_kraken_flu_to_build_custom_databases.ipynb
kraken_flu/: cmd.py
kraken_flu/src/: db.py  fasta_handler.py  fasta_loader.py  fasta_parser.py  fasta_writer.py  kraken_db_builder.py  kraken_db_ncbi_files.py  ncbi_influenza_fasta_filter.py  taxonomy_handler.py  taxonomy_loader.py  taxonomy_writer.py  utils.py
kraken_flu/tests/: test_db.py  test_fasta_handler.py  test_fasta_loader.py  test_fasta_parser.py  test_fasta_writer.py  test_kraken_db_builder.py  test_kraken_db_ncbi_files.py  test_ncbi_influenza_fasta_filter.py  test_taxonomy_handler.py  test_taxonomy_loader.py  test_taxonomy_writer.py  test_utils.py
kraken_flu/tests/fixtures/all_ncbi_flu_download/: library.fna  nucl_gb.accession2taxid
kraken_flu/tests/fixtures/db_fixtures/: db_fixture1.sql  db_fixtures2.sql
kraken_flu/tests/fixtures/incorrect_ncbi_data/taxonomy/: names.dmp
kraken_flu/tests/fixtures/kraken_ncbi_data/: make_test_fasta.py
kraken_flu/tests/fixtures/kraken_ncbi_data/taxonomy/: names.dmp  nodes.dmp
kraken_flu/tests/fixtures/ncbi_data_not_kraken/: nucl_gb.accession2taxid
kraken_flu/tests/fixtures/ncbi_data_not_kraken/taxonomy/: names.dmp  nodes.dmp
kraken_flu/tests/fixtures/rsv/: RSV_A_extract.fasta  RSV_B_extract.fasta  rsv_db_fixture1.sql  rsv_db_fixture2.sql
kraken_flu/tests/fixtures/test_ns/: sequences_with_Ns.fna
kraken_flu/tests/fixtures/unparseable_flu/: unparseable_flu.fna
