[metadata]
name = kraken_flu
description = a tool to modify KRAKEN2 databse build files to handle segmented flu genomes
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Frank Schwach
author_email = fs5@sanger.ac.uk
license = MIT

classifiers =
	Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# project_urls = 
#     Documentation = 
#     Source =
#     Tracker = 

[options]
packages = find:

platforms = any

# reads the Manifest.in file for extra files (data) that should be copied into the
# installation dir
include_package_data = False
install_requires =
	pytest>=6.2.2
	importlib-resources>=5.1.0
	cached-property>=1.5.2
	biopython>=1.80

python_requires = >=3.11

setup_requires =
	# this package extracts the version strings from Git tag, so 
	# we don't end up hardcoding the version number anywhere in the repo and 
	# there is no duplication of verison numbers in the code and in tags
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
	# this makes pip create the executable, which delegates to this function
    kraken_flu = kraken_flu.cmd:main

[options.extras_require]
test =
    pytest >= 6.2.2
all =
    %(test)s
